---------------------- 3.7.44 Release [11-February-2019] ----------------------

11-February-2019
  + menus (build 44)
  + modules (build 44)

---------------------- 3.7.43 Release [10-February-2019] ----------------------

10-February-2019
  - menus (build 43)
  - modules (build 43)

----------------------- 3.7.42  Release [22-March-2018] -----------------------

22-March-2018
  # php compatibility

------------------------ 3.7.41 Release [15-June-2017] ------------------------

15-June-2017
  + fields (build 41)

26-April-2017
  # JRequest deprecated (build 40)

---------------------- 3.6.39 Release  [28-January-2017] ----------------------

28-January-2017
  + modules (build 39)
  + menus (build 38)
  + client side xsl transformation (build 37)
  + export contacts (build 36)

29-November-2016
  ^ log (build 35)
  $ language files (build 35)
  
------------------------ 3.4.34 Release [2-March-2016] ------------------------

2-March-2016
  ^ check #__j2xml_websites (build 34)

----------------------- 3.4.33 Release [8-January-2016] -----------------------

8-January-2016
  - Joomla! 2.5 compatibility (build 33)

4-December-2015
  + Buttons support (build 32)

----------------------- 3.2.31 Build [24-February-2015] -----------------------

24-February-2015
  + Joomla! 1.6 compatibility (build 31)

13-September-2013
  # export button in Joomla! 3.x (build 30)

---------------------- 3.1.29 Release [5-September-2013] ----------------------

5-September-2013
  # send button in Joomla! 2.5 (build 29)

----------------------- 3.1.28 Release [31-August-2013] -----------------------

29-August-2013
  + send from category manager (build 28)

------------------------ 3.1.27 Release [18-June-2013] ------------------------

18-June-2013
  + export from category manager (build 27)

----------------------- 3.1.26 Release  [16-April-2013] -----------------------

16-April-2013
  + export button in Joomla! 3.0+ (build 26)
