@@ -1,3 +1,8 @@
+---------------------- 3.7.45 Release [12-February-2019] ----------------------
+
+12-February-2019
+  + view levels (build 45)
+
 ---------------------- 3.7.44 Release [11-February-2019] ----------------------
 
 11-February-2019
